force-app/main/default/objects/Route__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Name</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>