force-app/main/default/objects/Route__c/fields/Inv_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Inv_Number_Prefix__c</fullName>
    <label>Inv Number Prefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>