force-app/main/default/objects/Route__c/fields/Receipt_Approver__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>