force-app/main/default/objects/Route__c/fields/Route_Id__c.field-meta.xml
<CustomField>
    <fullName>Route_Id__c</fullName>
    <externalId>true</externalId>
    <label>Route Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>