force-app/main/default/objects/Route__c/fields/Start_Number__c.field-meta.xml
<CustomField>
    <fullName>Start_Number__c</fullName>
    <label>Start Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>