force-app/main/default/objects/Route__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIR</fullName>
                <label>First Week</label>
            </value>
            <value>
                <fullName>SEC</fullName>
                <label>Second Week</label>
            </value>
            <value>
                <fullName>THI</fullName>
                <label>Third Week</label>
            </value>
            <value>
                <fullName>FOR</fullName>
                <label>Fourth Week</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>