force-app/main/default/objects/Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>CompanyId__c</columns>
    <columns>Route_Id__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Warehouse__c</columns>
    <columns>State__c</columns>
    <columns>Cash_In_Hand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sent_to_SAP__c</columns>
    <columns>Start_Number__c</columns>
    <columns>Receipt_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>